<resources>
    <string name="app_name">Rick And Morty Characters</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="status">Status:</string>
    <string name="origin">Origin:</string>
    <string name="current_location">Current location:</string>
    <string name="gender">Gender:</string>
</resources>