<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="character"
            type="com.example.rickandmortycharacters.model.Character" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/character_detail_constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.CharacterDetailsFragment">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/character_detail_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:text="@string/name"
                app:layout_constraintEnd_toStartOf="@+id/character_details_vertical_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/character_detail_name"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:text="@{character.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/character_details_vertical_guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/character_detail_image"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/image_size"
                android:layout_marginTop="@dimen/standard_margin"
                app:imageUrl="@{character.image}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/character_detail_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/character_detail_gender_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:text="@string/gender"
                app:layout_constraintEnd_toStartOf="@+id/character_details_vertical_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/character_detail_image" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/character_detail_gender"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:text="@{character.gender}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/character_details_vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/character_detail_image" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/character_detail_status_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:text="@string/status"
                app:layout_constraintEnd_toStartOf="@+id/character_details_vertical_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/character_detail_gender" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/character_detail_status"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:text="@{character.status}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/character_details_vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/character_detail_gender" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/character_detail_origin_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:text="@string/origin"
                app:layout_constraintEnd_toStartOf="@+id/character_details_vertical_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/character_detail_status" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/character_detail_origin"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:text="@{character.origin.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/character_details_vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/character_detail_status" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/character_detail_location_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                android:text="@string/current_location"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/character_details_vertical_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/character_detail_origin" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/character_detail_location"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                android:text="@{character.location.name}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/character_details_vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/character_detail_origin" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/character_details_vertical_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>